
o ADD: "multilevel" plotting support for `hierEGA` (only used when `scores = "network"` since factor scores don't directly align with EGA detected dimensions)

o ADD: internal functions `shuffle` and `shuffle_replace` to replace `sample` with and without replacement; performed in C and allows seed setting independent of R (about 2-3x faster)

o UPDATE: `EBICglasso.qgraph` and `TMFG` were optimized; `TMFG` is now 2x faster

o UPDATE: `TMFG` can now directly estimate a GGM with the argument 'partial = TRUE'; implements the Local-Global Inversion method from Barfuss et al. (2016)

o UPDATE: switched on "Byte-Compile" (byte-compiles on our end and not when the user installs)

o UPDATE: `EGA.estimate` and `EGA` core functions have been updated for seamless use with more basic functions `network.estimation` and `community.*` functions

o UPDATE: S3method updates for `EGA.estimate` and `EGA` to provide estimation information

o UPDATE: `EGA.fit` updated to be compatiable with all updates to `EGA.estimate` (other optimizations were implemented such as direct communtiy detection application and unique solution finding)

o UPDATE: `tefi` updated with several checks (slightly slower for correlation matrix but much faster with raw data; includes data/matrix checks)

o UPDATE: `entropyFit` uses more effective vectorization (about 5-7x faster)

o UPDATE: `Embed` and `glla` made to be more efficient and includes an internal `glla_setup` function to avoid the same matrix calculations for every participant in a sample for `dynEGA`

o UPDATE: `riEGA` updated to be compatiable with all lower-level updates (slightly faster)

o UPDATE: `wto` updated to be fully vectorized (about 12x faster)

o UPDATE: `totalCor` and `totalCorMat` updated to be fully vectorized (about 10x faster)

o UPDATE: implemented internal `fast.data.frame` for more efficient data frame initialization when all values in data frame are the same
